# zaobiao-shenhe

./: .gitignore  README.md  Week2_测试报告.md  env.example  index.html  pyproject.toml  quick_start.py  requirements.txt  simple_week2_test.py  start.bat  start.sh  start_services.py  test_db_fix.py  test_week2.py  test_week3_features.py  week2_test_plan.py  启动脚本说明.md  系统设计方案.md  需求文档.md
.specstory/history/: 2025-09-21_03-58Z-讨论投标规范合规性审查需求.md
app/: __init__.py  main.py
app/api/: __init__.py
app/api/endpoints/: documents.py  health.py
app/core/: config.py  database.py  logging.py
app/services/: document_service.py  file_storage_service.py  parsing_service.py
app/utils/: cache_manager.py  database_base.py
base/: biaozun.docx  biaozun.md
